[package]
name = "simulatoor"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3.0"
tokio = { version = "1", features = ["full"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# bytes
bytes = "1.2.1"

revm = { version = "13.0.0", default-features = false, features = [
    "std",
    "serde",
    "memory_limit",
    "optional_eip3607",
    "optional_block_gas_limit",
    "optional_no_base_fee",
    "arbitrary",
    "c-kzg",
] }
revm-primitives = { version = "8.0.0", default-features = false }
revm-inspectors = { version = "0.5", features = ["serde"] }

alloy = { version = "0.2.1", features = ["full"] }
foundry-config = { git = "https://github.com/foundry-rs/foundry", rev = "f8aa4afec04cc0b7d364a5d78f0cde9e64fd14bf" }
foundry-evm = { git = "https://github.com/foundry-rs/foundry", rev = "f8aa4afec04cc0b7d364a5d78f0cde9e64fd14bf" }

log = "0.4"
pretty_env_logger = "0.4"
eyre = "0.6"
dashmap = "5.4.0"
uuid = { version = "1.3.4", features = ["v4", "fast-rng", "serde"] }
clap = { version = "4.5.14", features = ["derive"] }

[patch.crates-io]
alloy-consensus = { git = "https://github.com/alloy-rs/alloy", rev = "511ae98" }
alloy-contract = { git = "https://github.com/alloy-rs/alloy", rev = "511ae98" }
alloy-eips = { git = "https://github.com/alloy-rs/alloy", rev = "511ae98" }
alloy-genesis = { git = "https://github.com/alloy-rs/alloy", rev = "511ae98" }
alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy", rev = "511ae98" }
alloy-network = { git = "https://github.com/alloy-rs/alloy", rev = "511ae98" }
alloy-provider = { git = "https://github.com/alloy-rs/alloy", rev = "511ae98" }
alloy-pubsub = { git = "https://github.com/alloy-rs/alloy", rev = "511ae98" }
alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy", rev = "511ae98" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", rev = "511ae98" }
alloy-serde = { git = "https://github.com/alloy-rs/alloy", rev = "511ae98" }
alloy-signer = { git = "https://github.com/alloy-rs/alloy", rev = "511ae98" }
alloy-signer-ledger = { git = "https://github.com/alloy-rs/alloy", rev = "511ae98" }
alloy-signer-local = { git = "https://github.com/alloy-rs/alloy", rev = "511ae98" }
alloy-signer-trezor = { git = "https://github.com/alloy-rs/alloy", rev = "511ae98" }
alloy-transport = { git = "https://github.com/alloy-rs/alloy", rev = "511ae98" }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy", rev = "511ae98" }
alloy-transport-ipc = { git = "https://github.com/alloy-rs/alloy", rev = "511ae98" }
alloy-transport-ws = { git = "https://github.com/alloy-rs/alloy", rev = "511ae98" }
revm = { git = "https://github.com/bluealloy/revm", rev = "caadc71" }
revm-primitives = { git = "https://github.com/bluealloy/revm", rev = "caadc71" }