[package]
name = "simulatoor"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3.0"
tokio = { version = "1", features = ["full"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# bytes
bytes = "1.2.1"

revm = { version = "17.1.0", default-features = false }
revm-primitives = { version = "13.0.0", default-features = false }
revm-inspectors = { version = "0.10.0", features = ["serde"] }

alloy = { version = "0.6.4", features = ["full"] }
foundry-config = { git = "https://github.com/foundry-rs/foundry", rev = "d14c09f15a9849fe177d097451919810e5877617" }
foundry-evm = { git = "https://github.com/foundry-rs/foundry", rev = "d14c09f15a9849fe177d097451919810e5877617" }

log = "0.4"
pretty_env_logger = "0.4"
eyre = "0.6"
dashmap = "5.4.0"
uuid = { version = "1.3.4", features = ["v4", "fast-rng", "serde"] }
clap = { version = "4.5.14", features = ["derive"] }